[gd_scene load_steps=10 format=3 uid="uid://6qx3sj0084rm"]

[ext_resource type="Texture2D" uid="uid://cd6k5iw3h4e0r" path="res://Assets/Screenshot 2025-11-24 053207.png" id="1_1rerr"]
[ext_resource type="Script" uid="uid://cm7efrc10r7kr" path="res://Scripts/menu.gd" id="1_cayip"]
[ext_resource type="FontFile" uid="uid://besklpf1gw7wc" path="res://Fonts/super_crawler/Super Crawler.ttf" id="2_xhh6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhh6f"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cayip"]
bg_color = Color(0.5409905, 0.5409905, 0.5409905, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_158mb"]
bg_color = Color(0.65012825, 0.6501283, 0.65012825, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xhh6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwsa2"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsrd8"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cayip")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1rerr")

[node name="Overlay" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.60784316)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_top = 111.0
offset_right = 153.0
offset_bottom = 186.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_xhh6f")
theme_override_font_sizes/font_size = 65
text = "The Heist"

[node name="Buitons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.25
offset_top = -72.0
offset_right = 108.25
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="Buitons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 59
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cayip")
theme_override_styles/hover = SubResource("StyleBoxFlat_158mb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xhh6f")
text = "Start Game"

[node name="Options" type="Button" parent="Buitons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cayip")
theme_override_styles/hover = SubResource("StyleBoxFlat_158mb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xhh6f")
text = "Options"

[node name="Exit" type="Button" parent="Buitons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xhh6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cayip")
theme_override_styles/hover = SubResource("StyleBoxFlat_158mb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xhh6f")
text = "Exit"

[node name="WiP" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -121.5
offset_right = 140.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="WiP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -38.5
offset_right = 67.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 56
text = "W.I.P"

[node name="Back" type="Button" parent="WiP"]
layout_mode = 1
offset_left = 4.0
offset_top = 6.5
offset_right = 88.0
offset_bottom = 37.5
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_wwsa2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jsrd8")
text = "Back"

[connection signal="pressed" from="Buitons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buitons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buitons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="WiP/Back" to="." method="_on_button_pressed"]
